--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -7,8 +7,7 @@
 
 .projects-wrapper {
     width: 1200px;
-    min-width: 1200px;
-    max-width: 1200px;
+    max-width: 100vw;
     height: calc(100vh - var(--navbar-height));
     max-height: calc(100vh - var(--navbar-height));
     min-height: calc(100vh - var(--navbar-height));
